# ingot

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.sqlx/: query-14fad5b0d99025183665adeacdc63633d5c8f52b9a8ad5c8d299503a7572993c.json  query-4c80b9b54423aaa3b4d795fd7cc35147e5de037c2a60d034f3c6255b85d19595.json  query-72a673104feb62e8796386b60d0b3c7d5097187359e10c28c95a7d7f8c4ca35f.json  query-75e7f87ecbc308c7851c5cf9957a7a78637c63e2d901869edbaa84f83a4288e0.json  query-982fc72674ccef26dda13e3bdb000582b2b5fcfddc1d99891c04d2f98a60f873.json  query-e06672692cedce565d35d59e685ee8a595d1bda047587a1067f5500ea1631e39.json
crates/ingot-cli/: Cargo.toml
crates/ingot-cli/src/: commands.rs  main.rs
crates/ingot-config/: Cargo.toml
crates/ingot-config/src/: lib.rs
crates/ingot-connectivity/: Cargo.toml
crates/ingot-connectivity/benches/: ws_parse.rs
crates/ingot-connectivity/src/: lib.rs
crates/ingot-connectivity/src/kraken/: mod.rs  rest.rs  types.rs  ws.rs
crates/ingot-connectivity/tests/: paper_integration.rs
crates/ingot-core/: Cargo.toml
crates/ingot-core/benches/: hot_path.rs
crates/ingot-core/src/: api.rs  lib.rs
crates/ingot-core/src/accounting/: account.rs  error.rs  exchange.rs  ledger.rs  mod.rs  transaction.rs
crates/ingot-core/src/execution/: mod.rs  order.rs
crates/ingot-core/src/feed/: ticker.rs
crates/ingot-core/tests/: proptest_financial.rs  sim_trading_day.rs
crates/ingot-engine/: Cargo.toml
crates/ingot-engine/benches/: strategy_dispatch.rs
crates/ingot-engine/src/: handle.rs  lib.rs  strategy.rs
crates/ingot-engine/tests/: strategy_integration.rs
crates/ingot-gui/: Cargo.toml
crates/ingot-gui/src/: main.rs
crates/ingot-ipc/: Cargo.toml
crates/ingot-ipc/src/: convert.rs  lib.rs  services.rs  types.rs
crates/ingot-ipc/tests/: ipc_integration.rs
crates/ingot-primitives/: Cargo.toml
crates/ingot-primitives/src/: currency.rs  lib.rs  order.rs  symbol.rs
crates/ingot-server/: Cargo.toml
crates/ingot-server/src/: ipc_command.rs  ipc_publisher.rs  lib.rs  main.rs
crates/ingot-server/tests/: server_integration.rs
crates/ingot-storage/: Cargo.toml
crates/ingot-storage/migrations/: 20260228164058_001_create_accounts.up.sql  20260228221541_002_create_transactions.up.sql  20260228221554_003_create_entries.up.sql
crates/ingot-storage/src/: config.rs  event.rs  lib.rs  service.rs  task.rs
crates/ingot-storage/src/postgres/: accounts.rs  mod.rs  recovery.rs  transactions.rs
crates/ingot-storage/tests/: pg_integration.rs
docs/: issues.md
docs/bug_reports/: 001_ipc_reconnect.md  002_order_unsubscribed_reject.md  003_nav_broadcast.md
docs/plans/: 01_Product_Requirements_Document.md  02_Technical_Design_Document.md  03_Implementation_Plan.md  04_Step_2.2_Transaction_Persistence.md
