cargo-features = ["panic-immediate-abort"]

[workspace]
resolver = "3"
members = [
    "crates/ingot-cli",
    "crates/ingot-config",
    "crates/ingot-connectivity",
    "crates/ingot-core",
    "crates/ingot-engine",
    "crates/ingot-gui",
    "crates/ingot-ipc",
    "crates/ingot-primitives", "crates/ingot-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Stefan Bader"]

[workspace.dependencies]
anyhow = { version = "1.0.102", default-features = false }
assert_matches = { version = "1.5.0", default-features = false }
base64 = { version = "0.22.1", default-features = false }
chrono = { version = "0.4.44", default-features = false, features = ["now", "serde"] }
clap = { version = "4.5.60", default-features = false, features = ["derive", "env", "std"] }
criterion = { version = "0.8.2", default-features = false, features = ["html_reports"] }
dotenvy = { version = "0.15.7", default-features = false }
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
egui = { version = "0.33.3", default-features = false, features = ["default_fonts"] }
futures-util = { version = "0.3.32", default-features = false }
hmac = { version = "0.13.0-rc.5", default-features = false }
iceoryx2 = { version = "0.8", default-features = false }
proptest = { version = "1.10.0", default-features = false, features = ["std", "alloc"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json"] }
rust_decimal = { version = "1.40.0", default-features = false, features = ["c-repr", "macros", "maths", "serde", "serde-with-str", "std"] }
rustyline = { version = "17.0.2", default-features = false, features = ["with-file-history"] }
secrecy = { version = "0.10.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
sha2 = { version = "0.11.0-rc.5", default-features = false }
shell-words = { version = "1.1.1", default-features = false }
smallvec = { version = "2.0.0-alpha.12", default-features = false, features = ["serde"] }
thiserror = { version = "2.0.18", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28.0", default-features = false, features = ["connect", "native-tls"] }
tracing = { version = "0.1.44", default-features = false, features = ["std", "attributes"] }
tracing-appender = { version = "0.2.4", default-features = false }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["env-filter", "fmt", "std"] }
url = { version = "2.5.8", default-features = false }
uuid = { version = "1.21.0", default-features = false, features = ["serde", "v4"] }
wiremock = { version = "0.6.5", default-features = false }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

print_stdout = "warn"
print_stderr = "warn"

pedantic = { level = "warn", priority = -1 }
# Disabling specific pedantic lints that are often considered too noisy:
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "immediate-abort"
rpath = false
strip = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = true
strip = false

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "unwind"
rpath = false
strip = true
