[package]
name = "ingot-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
iceoryx2.workspace = true
ingot-config = { version = "0.1.0", path = "../ingot-config" }
ingot-ipc = { version = "0.1.0", path = "../ingot-ipc" }
ingot-primitives = { version = "0.1.0", path = "../ingot-primitives" }
rust_decimal.workspace = true
rustyline.workspace = true
shell-words.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
