[package]
name = "ingot-connectivity"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
futures-util.workspace = true
hmac.workspace = true
ingot-core = { version = "0.1.0", path = "../ingot-core" }
ingot-primitives = { version = "0.1.0", path = "../ingot-primitives" }
reqwest.workspace = true
rust_decimal.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
criterion.workspace = true
wiremock.workspace = true

[[bench]]
name = "ws_parse"
harness = false

[lints]
workspace = true
