[package]
name = "ingot-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
iceoryx2.workspace = true
ingot-core = { path = "../ingot-core" }
ingot-primitives = { path = "../ingot-primitives" }
rust_decimal.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true

# Lints specified manually (not `workspace = true`) to override
# `unsafe_code` from "forbid" to "deny". ZeroCopySend is an unsafe trait
# from iceoryx2 that must be implemented on IPC message types whose fields
# come from ingot-primitives. Each `unsafe impl` uses `#[allow(unsafe_code)]`.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
print_stdout = "warn"
print_stderr = "warn"
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
