[package]
name = "ingot-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ingot-core = { version = "0.1.0", path = "../ingot-core" }
ingot-primitives = { version = "0.1.0", path = "../ingot-primitives" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
tokio.workspace = true

[lints]
workspace = true
